update doc for v0.4.0